# routes/goals.js
@@ -1,6 +1,10 @@
 const router = require('express').Router();
 const { getGoalsByUserId, createGoal, editGoal, removeGoal } = require('../controllers/goalsController');
 const { createGoalValidation, editGoalValidation, idParamValidator, validateRequest } = require('../middleware/validate');
+const { isAuthenticated } = require('../middleware/authenticate');
+
+// All routes in this file require authentication
+router.use(isAuthenticated);
 
 router.get('/user/:userId', /*
     #swagger.tags = ['Goals']
